# chemesty

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SUBMOLECULE_REACTION_FIX.md  SUBMOLECULE_SUPPORT.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/project-templates/: README.md  bug-tracking-board.yml  feature-development-board.yml  release-management-board.yml
.github/workflows/: ci.yml  performance.yml
Assignments/: download_molecules.py  download_molecules_debug.py  download_real_molecules.py  final_download_real_molecules.py  implementation_summary.md  test.py  verify_implementation.py
Assignments/test_data/: pubchem_response_2.json  pubchem_response_3.json  pubchem_response_7.json
benchmarks/: benchmark_runner.py  molecule_performance.py
chemesty/: __init__.py  common_molecules.py  common_reactions.py  display_molecules.py  display_reactions.py  download_dataset.py  exceptions.py  million_molecules.py  molecule_reaction_integration.py  states.py
chemesty/cli/: __init__.py  main.py
chemesty/data/: README.md  __init__.py  database.py  download.py  molecule_lookup.py  pubchem_downloader.py  reaction_database.py
chemesty/elements/: __init__.py  ac.py  ag.py  al.py  am.py  ar.py  as_.py  at.py  atomic_element.py  au.py  b.py  ba.py  be.py  bh.py  bi.py  bk.py  br.py  ca.py  cd.py  ce.py  cf.py  charge.py  cm.py  cn.py  co.py  cr.py  cs.py  cu.py  data_driven_element.py  db.py  ds.py  dy.py  element_data.py  element_factory.py  er.py  es.py  eu.py  f.py  fe.py  fl.py  (+80 more)
chemesty/ml/: __init__.py  descriptors.py  feature_engineering.py  models.py  property_predictor.py
docs/: CHEMICAL_REACTIONS_README.md  MILLION_MOLECULES_README.md  MOLECULE_DATABASE_README.md  Makefile  TEST_COVERAGE_IMPROVEMENTS.md  TEST_COVERAGE_IMPROVEMENTS_FINAL.md  TEST_COVERAGE_IMPROVEMENTS_UPDATE.md  deployment.md  new_features.md  offline_analyzer.md  platforms_research.md  requirements.md
examples/: README.md  offline_reaction_analysis_example.py  quantum_chemistry_examples.py  reaction_examples.py  reaction_operator_examples.py  submolecule_examples.py  usage_example.py
test_solutions/: with_charge_class.py  with_charge_decorator.py  with_charge_function.py  with_charge_metaclass.py  with_charge_module.py  with_charge_module_fixed.py  with_charge_module_fixed_phases.py  with_charge_monkey_patch.py  with_charge_operator.py
tests/: comprehensive_test.py  reaction_types_test.py
tutorials/: 01_getting_started.ipynb
(+177 files in other folders)
