[tool.poetry]
name = "chemesty"
version = "0.1.0"
description = "A comprehensive chemistry package for working with elements, molecules, and chemical datasets"
authors = ["Mathias Sand <67421941+Mathiassand14@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Mathiassand14/chemesty"
repository = "https://github.com/Mathiassand14/chemesty"
documentation = "https://chemesty.readthedocs.io"
keywords = ["chemistry", "molecules", "elements", "quantum-chemistry", "cheminformatics", "molecular-modeling", "reactions", "periodic-table"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
chemesty = "chemesty.cli.main:main"

[tool.poetry.dependencies]
python = "^3.13"
openmm = "^8.3.0"
chempy = "^0.9.0"
rdkit = "^2025.3.3"
pyscf = "^2.9.0"
jupytext = "^1.17.2"
pubchempy = "^1.0.4"
sympy = "^1.12"
tqdm = "^4.67.1"
requests = "^2.31.0"
plotly = "^5.17.0"
joblib = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.2.1"
hypothesis = "^6.98.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.0.0"
myst-parser = "^3.0.0"
mypy = "^1.0.0"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
pre-commit = "^3.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=chemesty --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "rdkit.*",
    "openmm.*",
    "chempy.*",
    "pyscf.*",
    "pubchempy.*"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
